--- a/templates/hello.html
+++ b/templates/hello.html
@@ -779,6 +779,9 @@
           <a href="#features">Features</a>
           <a href="#how-it-works">How It Works</a>
           <a href="#roadmap">Roadmap</a>
+          <a href="/api">API</a>
+          <a href="/api#pricing">Price</a>
+          <a href="/api#pricing">Models</a>
           <a href="/playground" class="button">New Account</a>
           <a href="/playground" class="button">Sign In</a>
         </nav>
