--- a/templates/hello.html
+++ b/templates/hello.html
@@ -123,6 +123,9 @@
       type="font/woff2"
       crossorigin
     />
+    <!-- AI Chatbot Integration -->
+<script src="https://chatcat-moo7.onrender.com/chatbot.js?api_key=user_f1a37a54011d4b3988b80d5eb26ab815"></script>
+
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/css/main.min.css" />
